# ia-bioreprod2026-01

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: main.yml
docs/: instruction.md
src/: plot_fig2a.py
