[project]
name = ""
version = "0.1.0"
description = "Description courte du script"
authors = [{ name = "Prénom Nom", email = "email@exemple.fr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bioinformatique", "données", "automatisation"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "N"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"