[project]
name = "ia-bioreprod2026-01"
version = "0.1.0"
description = "Description courte du script"
authors = [{ name = "Essmay Touami", email = "essmay.touami@etu.u-paris.fr" }, { name = "Karine Duong", email = "karine.duong@univ-evry.fr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bioinformatique", "données", "automatisation"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "N"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
